--- a/posts/api-architecture-node.mdx
+++ b/posts/api-architecture-node.mdx
@@ -10,7 +10,7 @@ This blog's API has a couple of simple endpoints that return mock data for a mon
 
 ### API URLs
 
-During development the API runs as a standalone component. For integration tests, you can use either mocha tests or a load test as the API client. These tests get user-level access tokens to call the API and verify some OAuth security use cases. The API accepts mock access tokens when you point it to a mock authorization server:
+During development the API runs as a standalone component. You can use either mocha tests or a load test as the API client. These tests get user-level access tokens to call the API and verify some OAuth security use cases. The API accepts mock access tokens when you point it to a mock authorization server:
 
 | Component | Base URL |
 | --------- | -------- |
