--- a/posts/home.mdx
+++ b/posts/home.mdx
@@ -15,7 +15,7 @@ Before most APIs and clients can be run in production, they need a number of tec
 
 ### The OAuth 2.0 Authorization Framework
 
-To enable future-proof security, this blog uses OAuth 2.0 to secure APIs and clients. OAuth is a [family of specifications](https://datatracker.ietf.org/doc/html/rfc6749) for protecting data. Solutions are JSON-based and work well in all API, web and mobile technologies, to provide modern security capabilities. An OAuth setup empowers developers with modern and extensible security capabilities.
+To enable future-proof security, this blog uses OAuth 2.0 to secure APIs and clients. OAuth is a [family of specifications](https://datatracker.ietf.org/doc/html/rfc6749) for protecting data. Solutions are JSON-based and work well in all API, web and mobile technologies, to provide modern security capabilities. A solid OAuth setup empowers developers with modern and extensible security.
 
 Yet I have often seen people struggle to implement OAuth and realise its benefits, since it is a distributed architecture with many moving parts. An organization needs to introduce an intricate new component called the *Authorization Server* that outsources the deeper security from applications. You also need to make design choices that require insight, at both an architecture level and a code level.
 
