--- a/posts/desktop-apps-overview.mdx
+++ b/posts/desktop-apps-overview.mdx
@@ -1,6 +1,6 @@
 # Desktop Code Sample Overview
 
-Previously we summarised this blog’s <Link href='/posts/native-architecture-goals'>Native Architecture Goals</Link>. Secured mobile apps will be covered in later posts. First though, we will implement an initial OpenID Connect secured desktop code sample. The desktop app connects to <Link href='/posts/cloud-hosting'>HTTPS endpoints hosted in AWS</Link>, so that you only need to run the desktop app's code to get a fully integrated solution.
+Previously I summarised this blog’s <Link href='/posts/native-architecture-goals'>Native Architecture Goals</Link>. I cover secure mobile apps in later posts. First though, I provide a couple of OpenID Connect secured desktop code samples. They connect to <Link href='/posts/cloud-hosting'>HTTPS endpoints hosted in AWS</Link>, so that you only need to run the desktop app's code to get a fully integrated solution.
 
 ### Features
 
@@ -8,32 +8,26 @@ The behaviour provided in our initial sample is summarised below:
 
 | Feature | Description |
 | ------- | ----------- |
-| <span style={{color:'green'}}>**Cross Platform**</span> | The desktop app will run on Windows, macOS and Linux and will be coded in TypeScript |
-| <span style={{color:'green'}}>**Security Library Integration**</span> | A third party library will implement OpenID Connect logins and token handling |
-| <span style={{color:'green'}}>**System Browser Logins**</span> | The desktop app will invoke the system browser to sign the user in, then listen for the login response |
-| <span style={{color:'green'}}>**Reliability**</span> | We will handle some re-entrancy scenarios when our app interacts with the system browser |
-
-### Code Download
-
-The code for our initial desktop app can be downloaded from [here](https://github.com/gary-archer/oauth.desktopsample1), and we will cover full details of how to run it in the next post:
-
-![repo](/images/410/repo.jpg)
+| <span style={{color:'green'}}>**Cross Platform**</span> | The desktop app uses a technology stack that enables it to run on Windows, macOS and Linux. |
+| <span style={{color:'green'}}>**Security Library Integration**</span> | A security library implements OpenID Connect logins and token handling. |
+| <span style={{color:'green'}}>**System Browser Logins**</span> | The desktop app invokes the system browser to authenticate the user, then listens for the login response. |
+| <span style={{color:'green'}}>**Reliability**</span> | The desktop app handles some re-entrancy scenarios when the app interacts with the system browser. |
 
 ### Code Sample Behaviour
 
-Our overall Desktop UI has the same theme and views as this blog's earlier SPAs, though the login user experience will feel different:
+Our overall Desktop app has the same theme and views as this blog's earlier SPAs, though the login user experience will feel different:
 
 ![desktop app](/images/410/desktop-app.jpg)
 
 ### Desktop App Technology
 
-We will implement our app using [Electron](https://www.electronjs.org/), which uses web technologies for desktop screen development. We will therefore be able to re-use most code from the <Link href='/posts/improved-spa-code-sample-overview'>Plain TypeScript SPA</Link> that we built earlier.
+I use [Electron](https://www.electronjs.org/), which uses web technologies for desktop screen development. This enabled me to re-use most code from the <Link href='/posts/improved-spa-code-sample-overview'>Plain TypeScript SPA</Link> that I built earlier.
 
 ![electronjs](/images/410/electronjs.jpg)
 
 ### Platform Specific Appearance
 
-Our desktop app will run on Windows, macOS and Linux, and the following screenshots show the minor differences in appearance:
+The desktop app looks almost the same on Windows, macOS and Linux:
 
 ![windows app](/images/410/windows-app.jpg)
 
@@ -43,7 +37,7 @@ Our desktop app will run on Windows, macOS and Linux, and the following screensh
 
 ### AppAuth-JS Security Library
 
-We will use the [AppAuth-JS Library](https://github.com/openid/AppAuth-JS) to implement the OpenID Connect  flow. Once the behaviour is understood you should be able to adapt it to any other desktop technology.
+I use the [AppAuth-JS Library](https://github.com/openid/AppAuth-JS) to implement the OpenID Connect authorization code flow:
 
 ![appauthjs](/images/410/appauthjs.jpg)
 
@@ -51,7 +45,7 @@ We will use the [AppAuth-JS Library](https://github.com/openid/AppAuth-JS) to im
 
 A few years ago it was standard for OAuth secured desktop apps to use a webview for logins. Typically logins would use a popup window hosting a webview browser control. The popup would capture the login response from the webview via an *Out of Browser Redirect URI* such as *urn:ietf:wg:oauth:2.0:oob*.
 
-However, using webviews is no longer recommended. Webviews runs a private browser session, where SSO cookies may be dropped and password autofill may have issues. Authorization servers are encouraged to inspect the user agent and [block login requests from webviews](https://developers.googleblog.com/2016/08/modernizing-oauth-interactions-in-native-apps.html):
+The use of webviews is no longer recommended. Webviews runs a private browser session, with usability problems like dropped cookies and password autofill not work. Authorization servers are encouraged to inspect the user agent and [block login requests from webviews](https://developers.googleblog.com/2016/08/modernizing-oauth-interactions-in-native-apps.html):
 
 ![google webview](/images/410/google-webview.jpg)
 
@@ -59,11 +53,11 @@ Instead, in 2021 it is recommended to open an external system browser  window on
 
 ### Native Authorization Responses
 
-A web client runs in a browser and has an addressable URL on which to receive login responses. Native apps need a different mechanism, and the [RFC 8252 standard](https://datatracker.ietf.org/doc/rfc8252) explains the 3 options that can be used:
+A web client runs in a browser and has an addressable URL on which to receive login responses. Native apps need a different mechanism, and the [RFC 8252 standard](https://datatracker.ietf.org/doc/rfc8252) explains the 3 options that you can use:
 
 ![native response options](/images/410/native-response-options.jpg)
 
-Only the first two options work for a desktop app, and the loopback option will be used for this blog’s initial desktop app. The final desktop app will instead use a private URI scheme. Later, this blog’s mobile apps will use claimed HTTPS schemes.
+Only the first two options work for a desktop app, and I use the loopback option for this blog’s initial desktop app. The final desktop app will instead use a private URI scheme. Later, this blog’s mobile apps use claimed HTTPS schemes.
 
 | Option | Example Redirect URI | Usable By |
 | ------ | -------------------- | --------- |
@@ -71,9 +65,9 @@ Only the first two options work for a desktop app, and the loopback option will 
 | <span style={{color:'green'}}>**Private URI Scheme**</span> | *x-authsamples-myapp:/callback* | Mobile or desktop apps |
 | <span style={{color:'green'}}>**Claimed HTTPS Scheme**</span> | *https://www.authsamples-dev.com/myapp* | Mobile apps |
 
-### The AppAuth Code Sample
+### The AppAuth-JS Code Sample
 
-To quickly see a login via the System Browser, you can run the AppAuth-JS Electron code sample via these commands:
+Before running this blog's desktop app, you can quickly run the AppAuth-JS Electron code sample. To do so, run the following commands:
 
 ```bash
 git clone https://github.com/googlesamples/appauth-js-electron-sample
@@ -82,29 +76,25 @@ npm install
 npm start
 ```
 
-A basic desktop app is then presented, and we can click the *Sign In* option to invoke an OAuth login on the system browser:
+A minimal desktop app runs and you can click the *Sign In* option to invoke an OAuth login on the system browser:
 
 ![appauth unauthenticated](/images/410/appauth-unauthenticated.jpg)
 
-When the *Sign In* link is clicked, the system browser is opened. If the user is not already logged in, there will be a prompt to sign in via Google:
+When the *Sign In* link is clicked, the desktop app opens the system browser, using Google as the authorization server. If the user is not already signed in to the browser there is a prompt to authenticate:
 
 ![appauth login](/images/410/appauth-login.jpg)
 
-The Desktop App supplies a *loopback’*value of *http://127.0.0.1:8000* for the OAuth redirect URI, and creates an HTTP endpoint on this port, to listen for the response.
+The desktop app supplies a *loopback* value of *http://127.0.0.1:8000* for the OAuth redirect URI, and runs an HTTP server on this network interface and port, to listen for the response. After login, the HTTP server receives the authorization response and notifies the desktop app. The desktop app then extracts the authorization code and swaps it for tokens, after which it can call APIs.
 
-After login, a request is sent to this HTTP endpoint, with the authorization response URL. The desktop app then extracts the returned authorization code and swaps it for tokens, after which it can call APIs.
-
-### Login User Experience
-
-The login UX for the desktop view is not ideal. There is a disconnected browser window, and a blank page by default. We will show how to render a custom page, and also how to handle retries, to ensure reliability.
+The login user experience for the desktop view is not ideal. After login there is a disconnected browser window with a blank page. I show how to render a custom page, and also how to handle retries, to ensure reliability.
 
 ![appauth authenticated](/images/410/appauth-authenticated.jpg)
 
 ### Where Are We?
 
-This post explained the behaviours of the initial desktop code sample, to get logins and API calls working with basic reliability. Next we will show how to build and run it locally.
+I introduced this blog's initial desktop code sample and summarised its main OAuth behaviors using a minimal code sample. Next, I show how to build and run a more intricate Electron app.
 
 ### Next
 
-- Next I explain <Link href='/posts/desktop-app-how-to-run-the-code-sample'>How to Run the Desktop Code Sample</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- I explain <Link href='/posts/desktop-app-how-to-run-the-code-sample'>How to Run the Desktop Code Sample</Link>.
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
