--- a/posts/home.mdx
+++ b/posts/home.mdx
@@ -30,7 +30,8 @@ I explain a setup that enables you to run secure end-to-end API and client flows
 
 ### Code Samples
 
-This blog is code-centric with a focus on modern code that uses a separation of concerns. I keep security and other plumbing external to the valuable business logic. I provide a number of [Code Samples](https://github.com/gary-archer) which I use to stay up to date with mainstream technology stacks.
+This blog is code-centric with a focus on modern code that uses a separation of concerns. I provide a number of [Code Samples](https://github.com/gary-archer) which I use to stay up to date with mainstream technology stacks. The code is intentionally moderately complex, with a fair amount of plumbing to deal with foundational behaviours. At a real organization, a technical goal would be a clean code setup that enables the valuable business logic to scale.
+
 
 ![repos](/images/1/repos.jpg)
 
