--- a/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -1,6 +1,6 @@
 # Desktop App – How to Run the Code Sample
 
-Previously the <Link href='/posts/desktop-apps-overview'>Desktop Code Sample Overview</Link> provided a summary of behaviour. Next we will explain how to get the sample running locally and run some OAuth lifecycle events.
+Previously I provided a brief <Link href='/posts/desktop-apps-overview'>Desktop Code Sample Overview</Link>. Next I explain how to run a more detailed desktop code sample on your local computer, which manages OAuth behaviors in a more complete way.
 
 ### Prerequisite: Install Node.js
 
@@ -8,7 +8,7 @@ If required, go to the [Node.js Website](https://nodejs.org/en/download/), then 
 
 ### Step 1: Download Code from GitHub
 
-The project is available [here](https://github.com/gary-archer/oauth.desktopsample1), and can be downloaded / cloned to your local computer with this command:
+Clone the code sample's GitHub repository with the following command:
 
 ```bash
 git clone https://github.com/gary-archer/oauth.desktopsample1
@@ -49,34 +49,32 @@ export class CompaniesView {
 
 ### Step 3: Build and Run the Code
 
-Run the following bash script to build the desktop app’s TypeScript code , then run the executable:
+Run the following bash script to build the desktop app’s TypeScript code and then run the executable:
 
 ```bash
 ./start.sh
 ```
 
-The UI loads its home page and prepares to call the API, then detects that there is no OAuth access token, so the *Login Required View* is presented:
+The desktop app loads its home page and prepares to call the API, then detects that there is no OAuth access token, so the *Login Required View* is presented:
 
-![initial view](/images/420/initial-view.jpg)
+![initial view](/images/420/initial-view.jpg?v=20240922)
 
 ### Step 4: Login via the System Browser
 
 When the sign in is selected the app provides some visual progress that login is taking place externally:
 
-![logging in](/images/420/logging-in.jpg)
+![logging in](/images/420/logging-in.jpg?v=20240922)
 
-An OAuth authorization redirect is then triggered, in a separate system browser window, and this blog’s test credential can be used to sign in:
+An authorization redirect is triggered in a separate system browser window, and you can use this blog’s test user account to sign in:
 
 - User: *guestuser@example.com*
 - Password: *GuestPassword1*
 
-![browser login](/images/420/browser-login.jpg)
+If you did an earlier SPA login in the same browser and used the save password feature, you can password autofill for the desktop app. After user login, the system browser renders a post-login page, rather than showing a blank page. Alternatively, you could redirect the browser to an external site instead.
 
-If password autofill was used for the test user, in an earlier SPA login, it is remembered for the desktop app.  After login the system browser moves to  a post-login page, rather than showing a blank page. If preferred, the browser could be redirected to an external site instead.
+![browser logged in](/images/420/browser-loggedin.jpg?v=20240922)
 
-![browser logged in](/images/420/browser-loggedin.jpg)
-
-The app is then returned to the foreground and can get OAuth tokens, after which it can successfully get data from a <Link href='/posts/serverless-api-overview'>cloud deployed API</Link>, then render it:
+When login completes, the app gets OAuth tokens, stores them in memory and returns itself to the foreground. It then gets data from a <Link href='/posts/serverless-api-overview'>cloud hsoted OAuth-secured API</Link> and renders resutls:
 
 ![app logged in](/images/420/app-loggedin.jpg)
 
@@ -87,11 +85,14 @@ The desktop app has a JSON configuration file which includes its OAuth settings.
 ```json
 {
     "app": {
-        "apiBaseUrl":       "https://api.authsamples.com/investments"
+        "apiBaseUrl":       "https://api.authsamples.com/investments",
+        "useProxy": false,
+        "proxyUrl": "http://127.0.0.1:8888"
     },
     "oauth": {
         "authority":        "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
         "clientId":         "6o4rlsod8j6phsnuf3pdjo640u",
+        "loopbackHostname": "localhost",
         "loopbackMinPort":  8001,
         "loopbackMaxPort":  8003,
         "scope":            "openid profile https://api.authsamples.com/investments",
@@ -100,133 +101,79 @@ The desktop app has a JSON configuration file which includes its OAuth settings.
 }
 ```
 
-In the default setup the following URLs are used:
+With this configuration the app calls the following main URLs:
 
 | Component | URL(s) |
 | --------- | ------ |
 | <span style={{color:'green'}}>**API**</span> | *https://api.authsamples.com* |
 | <span style={{color:'green'}}>**Authorization Server**</span> | *https://login.authsamples.com* |
-| <span style={{color:'green'}}>**Post Login Page**</span> | *https://www.authsamples.com/apps/basicdesktopapp/postlogin.html* |
 
 Note that the JSON configuration also includes details related to running a *Loopback Web Server* on the local computer:
 
 | Setting | Description |
 | ------- | ----------- |
-| <span style={{color:'green'}}>**Loopback Port Range**</span> | Port numbers used in OAuth redirect URIs |
-| <span style={{color:'green'}}>**Post Login Page**</span> | Where to send the browser after a login |
+| <span style={{color:'green'}}>**Loopback Host Name**</span> | The hostname for the loopback HTTP server. |
+| <span style={{color:'green'}}>**Loopback Port Range**</span> | Port numbers used in OAuth redirect URIs. |
+| <span style={{color:'green'}}>**Post Login Page**</span> | Where to send the browser after a login. |
 
 ### Step 6: OAuth Client Registration
 
-Our desktop app is registered as an OAuth client in AWS Cognito, with the following settings:
+The desktop app is registered as an OAuth client in AWS Cognito, with the following settings:
 
 ![oauth client](/images/420/oauth-client.jpg)
 
-According to RFC 8252, it should be possible to register a redirect URI of *http://127.0.0.1* and any port should then be allowed at runtime. Yet some authorization servers do not support this. AWS Cognito required an *http://localhost* base URL instead of the loopback IP address, and I also had to register all possible redirect URI values.
-
-![loopback behaviour](/images/420/loopback-behaviour.jpg)
+According to RFC 8252, it should be possible to register a redirect URI that begins with *http://127.0.0.1* and the client can then use any port at runtime. Yet some authorization servers do not support this. AWS Cognito required the *http://localhost* base URL instead of the loopback IP address, and I also had to register all possible redirect URI values.
 
 ### Step 7: Authorization Redirect
 
-The desktop app uses the *Authorization Code Flow (PKCE)*, as is standard for native apps, and redirect messages are equivalent to those for SPAs.
+The desktop app uses the *Authorization Code Flow (PKCE)*, as is standard for native apps, and it uses the same fields in authorization redirects as other clients that use the authorization code flow.
 
 ![authorization redirect](/images/420/authorization-redirect.jpg)
 
-At this point the desktop app has started a local HTTP server. A low privilege port is used, with a value above 1024. The desktop app can therefore start the server without requiring local administrator rights.
+Before issing the redirect the the desktop app runs an HTTP server within its own process. The desktop app uses a low privilege hostname and port (above 1024) when doing so, to avoid users needing administrator privileges or the operating system presenting alerts.
 
 ### Step 8: Login Completion Page
 
-The login completion page was uploaded to an AWS S3 Bucket and then an AWS CloudFront distribution was used to expose it over an HTTPS URL:
+I uploaded the login completion page to an AWS S3 Bucket and deploy it at an HTTPS URL using the AWS CloudFront distribution for this blog's final SPA:
 
 ![s3 page](/images/420/s3-page.jpg)
 
 ### Step 9: Authorization Code Grant
 
-When the desktop app receives the login response it sends an authorization code grant message to swap the code for  OAuth tokens. PKCE is used to prove that the same caller who started the login is ending it.
+When the desktop app receives a login response it sends an authorization code grant message to swap the authorization code for OAuth tokens. The desktop app uses PKCE, which proves that the caller that starts the login is the same party ending it.
 
 ![authorization code grant](/images/420/authorization-code-grant.jpg)
 
-### Step 10: Understand Reactivation of the App
+### Step 10: Test Login Re-Entrancy
 
-When login completes, you may find that the browser  remains topmost and the user may have to manually switch back to the desktop app. Private URI scheme based logins have the best support for returning the app to the foreground, as will be demonstrated in the final desktop code sample.
-
-### Step 11: Test Login Re-Entrancy
-
-A busy user could fail to complete a login and close the browser window, leaving the UI in the following state. Our app allows the user to provide a gesture to retry the login, by clicking the *Home* button:
+A busy user could fail to complete a login and close the browser window, leaving the UI in the following state. Our app allows the user to provide a gesture to retry the login, by clicking the *Sign In* button again:
 
 ![re entrancy](/images/420/re-entrancy.jpg)
 
-### Step 12: Simulate Expiry Events
+### Step 11: Simulate Expiry Events
 
-We can use the UI’s session buttons to simulate expiry related events during a user session:
+You can use the desktop app's buttons to simulate expiry related events during a user session:
 
 ![expiry testing](/images/420/expiry-testing.jpg)
 
-Our first sample only stores tokens in-memory, so that if we use the *Reload* option in the Electron menu, tokens are lost and the user has to sign in again. We will improve on this for the final code sample.
-
-### Step 13: Test Access Token Expiry
-
-We can rehearse access token expiry by clicking *Expire Access Token* followed by *Reload Data*. This adds characters to the access token so that the API returns a 401 response. The app then sends a *Refresh Token Grant* message to get a new access token and retries API requests. Note that a desktop app is a public client and the refresh token is not protected with a client credential:
+You can rehearse access token expiry if you click *Expire Access Token* followed by *Reload Data*. This adds characters to the access token so that the API returns a 401 response. The app then sends a *Refresh Token Grant* message to get a new access token and retries API requests. Note that a desktop app is a public client, with no client credential to protect the refresh token:
 
 ![expired access token](/images/420/expired-access-token.jpg)
 
-### Step 14: Test Refresh Token Expiry
-
-We can rehearse refresh token expiry by clicking *Expire Refresh Token* followed by *Reload Data*. This adds characters to the refresh token so that the Authorization Server returns an *invalid_grant* response:
+You can rehearse refresh token expiry if you click *Expire Refresh Token* followed by *Reload Data*. This adds characters to the refresh token so that the authorization server returns an *invalid_grant* response. This error code means the user needs to sign in again, so the app redirects the user to the *Login Required* view.
 
 ![expired refresh token](/images/420/expired-refresh-token.jpg)
 
-This error code means the user needs to sign in again, so we redirect the user to the *Login Required* view.
+### Step 12: Logout
 
-### Step 15: Build the Desktop App Executable
-
-To build the app for distribution you can execute the *./pack.sh* script, which builds the app into a platform specific executable file under the *dist* folder, then runs it.
-
-### Local API Setup
-
-If required, you can run the desktop app against a local OAuth secured API.  Do so for one of this blog’s final APIs, by following the below steps.
-
-### Step A: Run the API
-
-Select one of the following API options and follow its instructions to run it locally:
-
-- <Link href='/posts/api-architecture-node'>Node.js API</Link>
-- <Link href='/posts/net-core-code-sample-overview'>.Net Core API</Link>
-- <Link href='/posts/java-spring-boot-api-overview'>Java Spring Boot API</Link>
-
-![running api](/images/420/running-api.jpg)
-
-### Step B: Point the Desktop App to a Local API
-
-To connect to local APIs, update the URL in the desktop.config.json file to the local computer's API:
-
-```json
-{
-    "app": {
-        "apiBaseUrl":       "https://api.authsamples-dev.com:446/investments"
-    },
-    "oauth": {
-        "authority":        "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
-        "clientId":         "6o4rlsod8j6phsnuf3pdjo640u",
-        "loopbackMinPort":  8001,
-        "loopbackMaxPort":  8003,
-        "scope":            "openid profile https://api.authsamples.com/investments",
-        "postLoginPage":    "https://www.authsamples.com/apps/basicdesktopapp/postlogin.html"
-    }
-}
-```
-
-### Step C: Run the Desktop App
-
-When you now run the desktop app it will call the local API, and you can also focus on API behaviour, such as OAuth and log handling:
-
-![desktop app and api](/images/420/desktop-app-and-api.jpg?v=20240915)
+The initial desktop app implements only a basic logout, that discards its tokens and returns it to the *Login Required* view. The next login uses the OpenID Connect *prompt=none* parameter to force a new login. In a real organization this would enable you to login as a different test user. However, AWS Cognito does not support this parameter, so this behavior does not work as intended.
 
 ### Where Are We?
 
-We have used our second SPA to build an OAuth-secured desktop app, which runs on all of the main operating systems. At this stage the app has some limitations which will be resolved in the second desktop sample.
+I used this blog's second SPA for the views of an OAuth-secured desktop app, which runs on all of the main operating systems. I further extend the desktop app shortly, in the final desktop code sample.
 
 ### Next
 
-- Next I provide some <Link href='/posts/desktop-app-coding-key-points'>Desktop App Code Details</Link>
-- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
+- I explain some <Link href='/posts/desktop-app-coding-key-points'>Desktop App Code Details</Link>.
+- For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
 
