--- a/posts/desktop-app-coding-key-points.mdx
+++ b/posts/desktop-app-coding-key-points.mdx
@@ -1,8 +1,8 @@
 # Desktop App – Code Details
 
-Previously we explained <Link href='/posts/desktop-apps-overview'>How to Run the Desktop Code Sample</Link>, which included some test scenarios. We will complete the posts for the initial Electron desktop app by describing some code-level details.
+Previously I summarised some test behavior in <Link href='/posts/desktop-apps-overview'>How to Run the Desktop Code Sample</Link>. I complete the content for the initial desktop app with some code-level details.
 
-### Desktop Technology
+### Code Layout
 
 The desktop app uses the exact same views that were used in one of this blog’s earlier code samples, for the <Link href='/posts/improved-spa-code-sample-overview'>Updated SPA</Link>. In Electron, the OAuth login flow is implemented using Node.js rather than browser code.
 
