--- a/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -14,7 +14,7 @@ Clone the code sample's GitHub repository with the following command:
 git clone https://github.com/gary-archer/oauth.desktopsample1
 ```
 
-![repo](/images/420/repo.jpg)
+![repo](/images/420/repo.jpg?v=20240922)
 
 ### Step 2: View the Code in an IDE
 
@@ -55,30 +55,26 @@ Run the following bash script to build the desktop app’s TypeScript code and t
 ./start.sh
 ```
 
-The desktop app loads its home page and prepares to call the API, then detects that there is no OAuth access token, so the *Login Required View* is presented:
+The desktop app loads its home page and prepares to call the API. When it does not yet have an access tokens it presents a *Sign In* button:
 
 ![initial view](/images/420/initial-view.jpg?v=20240922)
 
-### Step 4: Login via the System Browser
-
-When the sign in is selected the app provides some visual progress that login is taking place externally:
+When you click the button, the app first indicates that a login is in progress:
 
 ![logging in](/images/420/logging-in.jpg?v=20240922)
 
-An authorization redirect is triggered in a separate system browser window, and you can use this blog’s test user account to sign in:
+The app then creates an authorization request URL and opens the default system browser at that URL. You can use this blog’s test user account to sign in:
 
 - User: *guestuser@example.com*
 - Password: *GuestPassword1*
 
-If you did an earlier SPA login in the same browser and used the save password feature, you can password autofill for the desktop app. After user login, the system browser renders a post-login page, rather than showing a blank page. Alternatively, you could redirect the browser to an external site instead.
+If you did an earlier SPA login in the same browser and used the save password feature, you can password autofill for the desktop app. After user login, the system browser renders a post-login page, rather than showing a blank page. Alternatively, you could redirect the browser to an external site if your prefer.
 
 ![browser logged in](/images/420/browser-loggedin.jpg?v=20240922)
 
-When login completes, the app gets OAuth tokens, stores them in memory and returns itself to the foreground. It then gets data from a <Link href='/posts/serverless-api-overview'>cloud hsoted OAuth-secured API</Link> and renders resutls:
+When login completes, the app gets OAuth tokens, stores them in memory and returns itself to the foreground. It then gets data from a <Link href='/posts/serverless-api-overview'>cloud hosted OAuth-secured API</Link> and renders results.
 
-![app logged in](/images/420/app-loggedin.jpg)
-
-### Step 5: View OAuth Configuration
+### Step 4: View OAuth Configuration
 
 The desktop app has a JSON configuration file which includes its OAuth settings. By default the app connects to AWS endpoints, so that you only need to run the frontend locally:
 
@@ -86,8 +82,8 @@ The desktop app has a JSON configuration file which includes its OAuth settings.
 {
     "app": {
         "apiBaseUrl":       "https://api.authsamples.com/investments",
-        "useProxy": false,
-        "proxyUrl": "http://127.0.0.1:8888"
+        "useProxy":         false,
+        "proxyUrl":         "http://127.0.0.1:8888"
     },
     "oauth": {
         "authority":        "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
@@ -116,7 +112,7 @@ Note that the JSON configuration also includes details related to running a *Loo
 | <span style={{color:'green'}}>**Loopback Port Range**</span> | Port numbers used in OAuth redirect URIs. |
 | <span style={{color:'green'}}>**Post Login Page**</span> | Where to send the browser after a login. |
 
-### Step 6: OAuth Client Registration
+### Step 5: OAuth Client Registration
 
 The desktop app is registered as an OAuth client in AWS Cognito, with the following settings:
 
@@ -124,49 +120,47 @@ The desktop app is registered as an OAuth client in AWS Cognito, with the follow
 
 According to RFC 8252, it should be possible to register a redirect URI that begins with *http://127.0.0.1* and the client can then use any port at runtime. Yet some authorization servers do not support this. AWS Cognito required the *http://localhost* base URL instead of the loopback IP address, and I also had to register all possible redirect URI values.
 
-### Step 7: Authorization Redirect
-
-The desktop app uses the *Authorization Code Flow (PKCE)*, as is standard for native apps, and it uses the same fields in authorization redirects as other clients that use the authorization code flow.
-
-![authorization redirect](/images/420/authorization-redirect.jpg)
-
-Before issing the redirect the the desktop app runs an HTTP server within its own process. The desktop app uses a low privilege hostname and port (above 1024) when doing so, to avoid users needing administrator privileges or the operating system presenting alerts.
-
-### Step 8: Login Completion Page
+### Step 6: Login Completion Page
 
 I uploaded the login completion page to an AWS S3 Bucket and deploy it at an HTTPS URL using the AWS CloudFront distribution for this blog's final SPA:
 
-![s3 page](/images/420/s3-page.jpg)
+![s3 page](/images/420/s3-page.jpg?v=20240922)
 
-### Step 9: Authorization Code Grant
+### Step 7: Authorization Request
+
+The desktop app uses the *Authorization Code Flow (PKCE)*, as is standard for native apps, and it uses the same fields in authorization redirects as other clients that use the authorization code flow.
+
+![authorization redirect](/images/420/authorization-redirect.jpg?v=20240922)
+
+Before issing the redirect the the desktop app runs an HTTP server within its own process. The desktop app uses a low privilege hostname and port (above 1024) when doing so, to avoid users needing administrator privileges or the operating system prompting the user for permissions.
+
+### Step 8: Authorization Code Grant
 
 When the desktop app receives a login response it sends an authorization code grant message to swap the authorization code for OAuth tokens. The desktop app uses PKCE, which proves that the caller that starts the login is the same party ending it.
 
-![authorization code grant](/images/420/authorization-code-grant.jpg)
+![authorization code grant](/images/420/authorization-code-grant.jpg?v=20240922)
 
-### Step 10: Test Login Re-Entrancy
+### Step 9: Test Login Re-Entrancy
 
-A busy user could fail to complete a login and close the browser window, leaving the UI in the following state. Our app allows the user to provide a gesture to retry the login, by clicking the *Sign In* button again:
+A busy user could fail to complete a login and close the browser window, leaving the desktop app in a *login in progress* state. Our app allows the user to retry the login, by clicking the *Sign In* button again.
 
-![re entrancy](/images/420/re-entrancy.jpg)
-
-### Step 11: Simulate Expiry Events
+### Step 10: Simulate Expiry Events
 
 You can use the desktop app's buttons to simulate expiry related events during a user session:
 
-![expiry testing](/images/420/expiry-testing.jpg)
+![expiry testing](/images/420/expiry-testing.jpg?v=20240922)
 
 You can rehearse access token expiry if you click *Expire Access Token* followed by *Reload Data*. This adds characters to the access token so that the API returns a 401 response. The app then sends a *Refresh Token Grant* message to get a new access token and retries API requests. Note that a desktop app is a public client, with no client credential to protect the refresh token:
 
-![expired access token](/images/420/expired-access-token.jpg)
+![expired access token](/images/420/expired-access-token.jpg?v=20240922)
 
 You can rehearse refresh token expiry if you click *Expire Refresh Token* followed by *Reload Data*. This adds characters to the refresh token so that the authorization server returns an *invalid_grant* response. This error code means the user needs to sign in again, so the app redirects the user to the *Login Required* view.
 
-![expired refresh token](/images/420/expired-refresh-token.jpg)
+![expired refresh token](/images/420/expired-refresh-token.jpg?v=20240922)
 
 ### Step 12: Logout
 
-The initial desktop app implements only a basic logout, that discards its tokens and returns it to the *Login Required* view. The next login uses the OpenID Connect *prompt=none* parameter to force a new login. In a real organization this would enable you to login as a different test user. However, AWS Cognito does not support this parameter, so this behavior does not work as intended.
+The initial desktop app implements only a basic logout, that discards its tokens and returns it to the *Login Required* view. All authorization requests use the OpenID Connect *prompt=none* parameter to force a new login. In a real organization this would enable you to login as a different test user. However, AWS Cognito does not support this parameter, so this behavior does not work as intended.
 
 ### Where Are We?
 
